--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,3 @@
-base_url =
-username =
-password = 
+base_url = https://rewards-app-sit.azurewebsites.net/Account/Login
+username = DanTest123
+password = DanTest123
