--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
+<project> xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -19,6 +19,13 @@
             <artifactId>selenium-java</artifactId>
             <version>3.141.59</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.cucumber/gherkin -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>gherkin</artifactId>
+            <version>5.1.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>commons-io</groupId>
@@ -54,14 +61,14 @@
             <version>4.12</version>
         </dependency>
 
-        <!--    https://mvnrepository.com/artifact/info.cukes/cucumber-core &ndash;&gt;-->
-        <!--    <dependency>-->
-        <!--        <groupId>info.cukes</groupId>-->
-        <!--        <artifactId>cucumber-core</artifactId>-->
-        <!--        <version>1.2.6</version>-->
-        <!--    </dependency>-->
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+<!--     <dependency>-->
+<!--            <groupId>io.cucumber</groupId>-->
+<!--            <artifactId>cucumber-java</artifactId>-->
+<!--            <version>6.6.1</version>-->
+<!--      </dependency>-->
 
-        <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-java -->
+        https://mvnrepository.com/artifact/info.cukes/cucumber-java -->
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-java</artifactId>
